# proof-please

./: AGENTS.md  README.md  good-code-rubric.md  justfile  pyproject.toml
docs/: README.md  prototype_extract_health_claims.md  reviewer_rubric.md  streamlit_explorer.md  transcript_formats.md
scripts/: prototype_extract_health_claims.py
src/proof_please/: cli.py  db.py  models.py
src/proof_please/explorer/: __init__.py  app.py  data_access.py  linking.py  models.py  styles.py  views.py
src/proof_please/pipeline/: __init__.py  chunking.py  dedupe.py  extract_claims.py  generate_queries.py  io.py  models.py  normalize.py  ollama_client.py  pipeline_runner.py  printing.py
tests/: test_prototype_script_cli_help.py
tests/explorer/: test_data_access.py  test_linking.py
tests/pipeline/: test_chunking.py  test_dedupe.py  test_io.py  test_normalize_claims.py  test_normalize_queries.py  test_pipeline_runner.py
