[project]
name = "proof-please"
version = "0.1.0"
description = "An experimental lab for extracting and evaluating health claims from podcasts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "duckdb>=1.4.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "pytest>=9.0.2",
    "requests>=2.32.0",
    "rich>=14.1.0",
    "streamlit>=1.41.0",
    "typer>=0.16.0",
    "watchdog>=6.0.0",
]

[project.scripts]
proof-please = "proof_please.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/proof_please"]
